phase 7: Admin panel + RBAC UI completed